# wasm-playground

./: README.md
clang/01_helloworld/: README.md  hello.js  hello.wasm
clang/02_helloworld/: README.md  hello2.js  hello2.wasm
clang/03_helloworld/: README.md  hello3.html  hello3.js  hello3.wasm
clang/04_libwep/: README.md  a.html  a.out.js  a.out.wasm  webp.c
rust/helloworld_01/: Cargo.toml  README.md
rust/helloworld_01/pkg/: helloworld_01.js  package.json
rust/helloworld_01/site/: README.md  helloworld_01_bg.wasm  index.js  package-lock.json  package.json
rust/helloworld_01/src/: lib.rs
wast/01_helloworld/: README.md  helloworld.wat
wast/02_helloworld/: README.md  helloworld.html  helloworld.wasm  helloworld.wat  helloworld_reverse.wat
wast/03_helloworld/: README.md  hello.wasm  hello.wat  hello_reverse.wat  helloworld.html  world.wasm  world.wat  world_reverse.wat
